--- a/index.html
+++ b/index.html
@@ -90,6 +90,10 @@
       display: block;
       margin: 2rem auto;
     }
+
+    .hidden {
+      display: none !important;
+    }
   </style>
 </head>
 <body>
@@ -97,11 +101,14 @@
   <div class="container">
     <h1 style="text-align: center;">مدیریت میزهای بازی</h1>
 
+    <!-- Tabs -->
     <div class="tabs">
-      <div class="tab active" onclick="switchTab('PS5')">PS5</div>
-      <div class="tab" onclick="switchTab('بیلیارد')">بیلیارد</div>
+      <div class="tab active" data-tab="all">همه</div>
+      <div class="tab" data-tab="PS5">PS5</div>
+      <div class="tab" data-tab="بیلیارد">بیلیارد</div>
     </div>
 
+    <!-- Tables -->
     <div id="tables" class="grid"></div>
 
     <div id="total">درآمد کل: <span id="total-income">0</span> تومان</div>
@@ -125,7 +132,6 @@
     let totalIncome = parseInt(localStorage.getItem("totalIncome")) || 0;
     let reportTotal = parseInt(localStorage.getItem("reportTotal")) || 0;
     let timers = {};
-    let currentTab = 'PS5';
 
     const tableContainer = document.getElementById('tables');
     const totalIncomeEl = document.getElementById('total-income');
@@ -143,14 +149,12 @@
       return `${mins}:${secs < 10 ? '0' : ''}${secs}`;
     }
 
-    function render() {
+    function renderTables() {
       tableContainer.innerHTML = '';
-      document.querySelectorAll('.tab').forEach(tab => tab.classList.remove('active'));
-      document.querySelector(`.tab:contains(${currentTab})`)?.classList.add('active');
-
-      tables.filter(t => t.type === currentTab).forEach(table => {
+      tables.forEach(table => {
         const div = document.createElement('div');
-        div.className = 'table';
+        div.className = `table`;
+        div.dataset.type = table.type;
         div.innerHTML = `
           <h2>میز ${table.id} (${table.type})</h2>
           <label>نرخ (تومان/ساعت): <input type="number" value="${table.rate}" id="rate-${table.id}" /></label>
@@ -169,13 +173,24 @@
           startTimer(table.id);
         }
       });
+
       totalIncomeEl.textContent = totalIncome.toLocaleString();
       reportTotalEl.textContent = reportTotal.toLocaleString();
     }
 
-    function switchTab(tabName) {
-      currentTab = tabName;
-      render();
+    function filterTables(type) {
+      document.querySelectorAll('.tab').forEach(tab => tab.classList.remove('active'));
+      document.querySelector(`.tab[data-tab="${type}"]`).classList.add('active');
+
+      document.querySelectorAll('.table').forEach(el => {
+        if (type === "all") {
+          el.classList.remove("hidden");
+        } else if (el.dataset.type === type) {
+          el.classList.remove("hidden");
+        } else {
+          el.classList.add("hidden");
+        }
+      });
     }
 
     function startTimer(id) {
@@ -240,11 +255,11 @@
         }
         timers = {};
         save();
-        render();
+        renderTables();
       }
     }
 
-    // حالت تاریک
+    // Dark mode toggle
     const modeBtn = document.getElementById('mode-toggle');
     modeBtn.onclick = () => {
       document.body.classList.toggle('dark');
@@ -252,13 +267,21 @@
       localStorage.setItem("darkMode", document.body.classList.contains('dark') ? "1" : "0");
     };
 
-    // بازیابی حالت تاریک
     if (localStorage.getItem("darkMode") === "1") {
       document.body.classList.add("dark");
       modeBtn.textContent = "☀️";
     }
 
-    render();
+    // Init
+    renderTables();
+    filterTables('all');
+
+    document.querySelectorAll('.tab').forEach(tab => {
+      tab.addEventListener('click', () => {
+        const type = tab.dataset.tab;
+        filterTables(type);
+      });
+    });
   </script>
 </body>
-</html>
+</html
